# Mac

./: .gitignore  2d.pvsm  CMakeLists.txt  CTestConfig.cmake  MyCxxTestConfig.cmake  README.md  all.pvsm  proj_speed_pres.pvsm  suppres_python
Octave/: solheat.m
concept/: GetCellType.h  KeyTableMap.h  KeyTableMapIterator.h  MacCell.h  MacGetSpeed.h  MacWorld.h  Particle.h  Physvector.h  TableContainerList.h
doc/: Doxyfile  Doxyfile~  DoxygenLayout.xml
doc_src/: Cell.md  Container.md  Container_List.md  Container_Map.md  Convection.md  Data.md  DataBase.md  DataBase_Base.md  DataBase_Topology.md  Data_CellType.md  Data_CellType_Domain_Fluid.md  Data_CellType_Domain_Implement.md  Data_CellType_Fluid_Air.md  Data_CellType_Implemented_Air.md  Data_CellType_Implemented_Fluid.md  Data_CellType_Implemented_Fluid_Air.md  Data_Grid.md  Data_Grid_MacCell.md  Data_Interface_Domain_Fluid_Rho.md  Data_Interface_Domain_Implement_Rho.md  Data_Interface_Fluid_Air.md  Data_Operation.md  Data_Particle.md  Data_Pressure.md  Data_Speed.md  Data_Storage.md  Decorators.md  Extrapolate.md  GetCellType.md  GetSpeed.md  Gravity.md  Hash_Map.md  Hookable_Table.md  Initial_Layer.md  Interior.md  Interpolation.md  JetDEau.md  LinkedList.md  MAC.md  Module.md  (+12 more)
doc_src/old/: Container.md  Container_List.md  Container_Map.md  Convection.md  Extrapolate.md  GetCellType.md  GetSpeed.md  Gravity.md  Interior.md  Inversible_Value.md  JetDEau.md  Laplacien.md  Linear_Solver.md  MAC.md  Mac_Initialize.md  Map.md  Module.md  Move_Particle.md  ODE_Method.md  ODE_Solver.md  Output.md  Particle.md  Semi-lag.md  SolvePressure.md  Update_Topology.md  Upwind.md  Viscosity.md  World.md
doc_src/tex/: Makefile
qtdoc/: Doxyfile
src/: Algorithm_Extrapolate_Boundary_Condition.h  Algorithmes_Solve_Pressure_Dirichlet_Pyamg.h  Algorithms.h  Algorithms_Accel_To_Speed.h  Algorithms_After.h  Algorithms_After_From_Algorithms.h  Algorithms_Apply_Wind.h  Algorithms_Before.h  Algorithms_Before_From_Algorithms.h  Algorithms_Calculate_Time_Step.h  Algorithms_Convection.h  Algorithms_Create_Fluid_Particle.h  Algorithms_Create_Fluid_Particle_Depth.h  Algorithms_Create_Interior_Depth.h  Algorithms_Delete_MacCell.h  Algorithms_Do_After_Pressure.h  Algorithms_Do_Pressure.h  Algorithms_Euler.h  Algorithms_Euler_Force.h  Algorithms_Extrapolate.h  Algorithms_Extrapolate_Nan.h  Algorithms_Fluid_To_Layer.h  Algorithms_Gravity.h  Algorithms_Inflow_To_Const.h  Algorithms_Initialize_Layer_And_Depth.h  Algorithms_Initialize_MacCell.h  Algorithms_Layer_Initial_With_Particle.h  Algorithms_Layer_Initial_With_Particle_Depth.h  Algorithms_Move_Particles.h  Algorithms_Output.h  Algorithms_Output_Only_Speed.h  Algorithms_Output_Speed_Pressure.h  Algorithms_RungeKutta.h  Algorithms_RungeKutta_Force.h  Algorithms_RungeKutta_RK2.h  Algorithms_RungeKutta_RK2_TVD.h  Algorithms_RungeKutta_all.h  Algorithms_Solid_To_Const.h  Algorithms_Solve_Pressure.h  Algorithms_Solve_Pressure_Dirichlet.h  (+341 more)
src/old/: ApplyToEveryMacCell.h  ApplyToEveryPhysvectorData.h  CalculateMacMaximalSpeed.h  CalculateMacMaximalSpeedNonIso.h  CalculateTimeStep.h  CalculateTimeStep.tpp  CalculateTimeStepNonIso.tpp  ComputeSpeedLaplacien.h  Config.h.in  Container_Filling.cpp  Euler.tpp  ExtrapolateCellFluid.h  GetCellType.h  GetCellType.tpp  GetCellType_Air.h  GetCellType_Air.tpp  GetCellType_Air_Base.tpp  GetCellType_Base.h  GetCellType_Base.tpp  GetCellType_Pressure_Boundary_Base.h  GetCellType_Pressure_Boundary_Constant.h  GetCellType_Pressure_Boundary_Constant.tpp  GetCellType_Pressure_Boundary_Domaine.tpp  GetCellType_Pressure_In_Domaine_Base.h  GetCellType_Pressure_In_Domaine_Fluid_Only.h  GetCellType_Pressure_In_Domaine_Fluid_Only.tpp  GetCellType_Rho.tpp  InternalException.h  Inversible_Value_Vect.h  JetDEau.h  JetDEau.tpp  MacCalculateCirculation.h  MacCell.h  MacCell.tpp  MacConvectCenter.h  MacGetVelocity.h  MacGetVelocity.tpp  MacGravity.h  MacInitializeCell.tpp  MacInitializeCell3.tpp  (+43 more)
test/: Irrotational_Flow.cpp  Jet.cpp  Jet3.cpp  Lateral_jet.cpp  Lateral_jet_3.cpp  Pool_Constant_Speed_2d.cpp  Pool_Lin_Speed_2d.cpp  Single_Particle.cpp  SolHeat_2d.cpp  TestAlgorithm_Apply_Wind.h  TestAlgorithm_Calculate_Time_Step.h  TestAlgorithm_Delete_MacCell.h  TestAlgorithm_Initialize_MacCell.h  TestAlgorithm_Layer_Initial_With_Particle.h  TestAlgorithm_Speed_Constant_Mirror.h  TestAlgorithms_Convection.h  TestAlgorithms_Create_Fluid_Particle.h  TestAlgorithms_Extrapolate.h  TestAlgorithms_Gravity.h  TestAlgorithms_Move_Particles.h  TestAlgorithms_Output.h  TestAlgorithms_Solve_Pressure.h  TestAlgorithms_Update_CellType_Layer.h  TestAlgorithms_Viscosity.h  TestApplyToVectorElement.cpp  TestCalculateTimeStep.cpp  TestCalculateTimeStep.h  TestChunkHashTable.h  TestChunk_Hash_Table_Performance.cpp  TestComputeSpeedLaplacien.cpp  TestConvection.cpp  TestConvectionDiag.cpp  TestConvectionDiagCenter.cpp  TestData_CellType_Fluid_Air.h  TestData_CellType_Fluid_Air_Solid_Inflow.h  TestData_CellType_Fluid_Air_Solid_Inflow_0_Pres.h  TestData_CellType_Fluid_Air_Solid_Inflow_Interior.h  TestData_CellType_Fluid_Air_Solid_Inflow_Interior_0_Pres.h  TestData_Chunk.h  TestData_Grid.h  (+98 more)
test/old/: TestAlgorithm_Speed_Constant_Mirror.h  TestAlgorithms_Extrapolate.h  TestApplyToVectorElement.h  TestChunk_Hash_Table_Performance.cpp  TestComputeSpeedLaplacien.h  TestConvectionDiagCenter.cpp  TestData_Grid_MacCell.h  TestData_Grid_Speed.h  TestData_Hook_Neighbour_List_Key.h  TestData_Interface_Fluid_Air.h  TestExtrapolateCellFluid.h  TestExtrapolateCellFluid2.h  TestFillingContainer2D_Basic.cpp  TestFillingContainer_Basic.cpp  TestFillingContainer_Basic_Pyamg.cpp  TestMacCell.h  TestMacGetVelocity.h  TestMacInitializeCell.h  TestMacWorld2.h  TestMac_1_OrderUpWindConvect.h  TestMath_Set2.h  TestNLinearInterpolation.h  TestNeighborsVelocity.h  TestOutputVectorSpeed.h  TestParticleToKey.h  TestPerformance_Without_Particle.cpp  TestPolicy_Gradiant.h  TestPolicy_Laplacian_Speed.h  TestPolicy_Speed_Interpolation_Linear.h  TestSerialization.h  TestSolvePressureUmfpack.h  TestStationar.h  TestTableContainerList.h  (+4 more)
